# aries-sdk-c

./: LICENSE  Module.mk  README.md  meson.build
examples/: aries_test.c  aries_test_buslock.c  eeprom_direct.c  eeprom_test.c  eeprom_update.c  link_example.c  link_test.c  margin_test.c  prbs.c
examples/include/: aspeed.h  eeprom.h  misc.h  rpi.h
examples/source/: misc.c  (+3 more)
html/: _r_e_a_d_m_e_8md.html  annotated.html  aries__a0__reg__defines_8h.html  aries__a0__reg__defines_8h_source.html  aries__api_8c.html  aries__api_8h.html  aries__api_8h_source.html  aries__api__types_8h.html  aries__api__types_8h_source.html  aries__error_8h.html  aries__error_8h_source.html  aries__globals_8h.html  aries__globals_8h_source.html  aries__i2c_8c.html  aries__i2c_8h.html  aries__i2c_8h_source.html  aries__link_8c.html  aries__link_8h.html  aries__link_8h_source.html  aries__margin_8c.html  aries__margin_8h.html  aries__margin_8h_source.html  aries__mpw__reg__defines_8h.html  aries__mpw__reg__defines_8h_source.html  astera__log_8c.html  astera__log_8h.html  astera__log_8h_source.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_c.html  globals_defs_i.html  (+40 more)
include/: aries_a0_reg_defines.h  aries_api.h  aries_api_types.h  aries_error.h  aries_globals.h  aries_i2c.h  aries_link.h  aries_margin.h  aries_misc.h  aries_mpw_reg_defines.h  astera_log.h
scripts/: print_link_logs.py  print_link_state.py
source/: aries_api.c  aries_i2c.c  aries_link.c  aries_margin.c  aries_misc.c  astera_log.c
(+53 files in other folders)
